--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/sldion">View on GitHub</a>
 
-          <h1 id="project_title">Sldion.GitHub.io</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Shawn Dion</h1>
+          <h2 id="project_tagline">This is where i'll put all the fun stuff</h2>
 
         </header>
     </div>
