--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 
   <head>
@@ -7,7 +8,8 @@
     <meta name="description" content="Sldion.GitHub.io : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
+    <link rel="stylesheet" href="stylesheets/font-awesome-4.6.1/css/font-awesome.min.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <title>Sldion.GitHub.io</title>
   </head>
 
@@ -18,7 +20,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/sldion">View on GitHub</a>
 
-          <h1 id="project_title">Shawn Dion</h1>
+          <h1 id="project_title" font-family="Lobster">Shawn Dion <i class="fa fa-thumbs-up"></i> </h1>
           <h2 id="project_tagline">This is where i'll put all the fun stuff</h2>
 
         </header>
@@ -30,7 +32,12 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>This automatic page generator is the easiest way to create beautiful pages for
+    all of your projects. Author your page content here
+    <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>,
+    select a template crafted by a designer, and publish. After your page is generated, you can check out the
+    new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply
+    sync your repository and you’ll see the new branch.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
@@ -61,7 +68,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
