added stuff title page and navbar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <link rel="stylesheet" href="stylesheets/font-awesome-4.6.1/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
     <title>Sldion.GitHub.io</title>
   </head>
 
@@ -18,11 +22,22 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/sldion">View on GitHub</a>
+            <nav class="navbar navbar-custom navbar-fixed-top navbar-header">
+            <div class="container-fluid">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Page 3</a></li>
+                </ul>
+                 <a id="forkme_banner" href="https://github.com/sldion">View on GitHub</a>
+                    </div>
+                    </nav>
 
-          <h1 id="project_title" font-family="Lobster">Shawn Dion <i class="fa fa-thumbs-up"></i> </h1>
-          <h2 id="project_tagline">This is where i'll put all the fun stuff</h2>
-
+         <div class="Title text-center">
+             <h1 id="project_title" font-family="Lobster">Shawn Dion <i class="fa fa-thumbs-up"></i> </h1>
+             <h2 id="project_tagline">This is where i'll put all the fun stuff</h2>
+         </div>
         </header>
     </div>
 
