--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
          <div class="Title text-center">
              <h1 id="project_title" font-family="Lobster">Shawn Dion <i class="fa fa-thumbs-up"></i> </h1>
-             <h2 id="project_tagline">This is where i'll put all the fun stuff</h2>
+             <h2 id="project_tagline">HELLO</h2>
          </div>
         </header>
     </div>
@@ -48,6 +48,7 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This</p>
+<h1 id="msg"></h1>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
